feat: add show notifications component

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,7 +89,16 @@ body {
   }
 }
 
-
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
 
 @layer base {
   * {
@@ -98,4 +107,12 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.rdp-vhidden {
+  @apply hidden;
+}
+
+select::-webkit-scrollbar {
+  display: none;
 }
